Merging the release55_dev branch into trunk